--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
 }
 
-#login, form {
+.homeDiv, form {
     display: flex;
     flex-direction: column;
     align-items: center;
