--- a/templates/index.html
+++ b/templates/index.html
@@ -10,41 +10,42 @@
 
 <div id = "loginDiv" class = "homeDiv">
     <h1>Login</h1>
-    <form>
-        <input type="text" placeholder="Username" name = "username">
-        <input type="password" placeholder="Password" name = "password">
-        <div id = "peripheral">
+    <form action="/login" method="post">
+        <input type="text" placeholder="Username" name = "username" required>
+        <input type="password" placeholder="Password" name = "password" required>
+        <div id = "loginAlternative">
             <a id = "register">Register</a>
             <a id = "pwd">Forgot</a>
         </div>
-        <button id = "loginButton" class = "button">Login</button>
+        <button id = "loginButton" class = "button" type="submit">Login</button>
     </form>
 </div>
 
 <div id="registerDiv" style="display: none" class = "homeDiv">
     <h1>Register</h1>
-    <form>
-        <input type="text" placeholder="Username" name="username">
-        <input type="text" placeholder="Password" name="password">
-        <input type="text" placeholder="Confirm password" name="confirmPassword">
-        <button id="registerButton" class = "button">Create</button>
+    <form action="/register" method="post">
+        <input type="text" placeholder="Username" name="username" required>
+        <input type="password" placeholder="Password" name="password" required>
+        <input type="password" placeholder="Confirm password" name="confirmPassword" required>
+        <button id="registerButton" class = "button" type="submit">Create</button>
     </form>
 </div>
 
 <div id="forgotDiv" style="display: none" class = "homeDiv">
     <h1>Forgot Password</h1>
-    <form id = "requestOTP">
-        <input type="text" placeholder="Email ID" name="username">
-        <button id="pwdButton" class = "button">Submit</button>
+    <form id = "requestOTP" action="/getOTP" method="post">
+        <input type="text" placeholder="Username" name="username" required>
+        <button id="pwdButton" class = "button" type="submit">Submit</button>
     </form>
-    <form id = "authentication">
-        <input type="text" placeholder="OTP" name="otp">
-        <button id="otpButton" class = "button">Submit</button>
+
+    <form id = "authentication" action="/verifyOTP" method="post">
+        <input type="text" placeholder="OTP" name="otp" required>
+        <button id="otpButton" class = "button" type="submit">Submit</button>
     </form>
 </div>
 
-<div id = "habitPage">
-
+<div id = "habitPage" style="display: none;" class="homeDiv">
+    <div id = "addNewHabit">+</div>
 </div>
 
 <script src = "../static/script.js"></script>
