--- a/static/style.css
+++ b/static/style.css
@@ -77,10 +77,78 @@ input {
     justify-content: center;
     cursor: pointer;
     font-size: 35px;
+    border-radius: 15px;
+}
+
+#habitHead {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    top : 20px;
+    left : 30px;
+    right: 40px;
 }
 
 .habbit {
     background-color: #151f30;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.habbitCheckContainer {
+    display: flex;
+    justify-content: space-evenly;
+    gap : 3px;
+}
+
+.habbitCheckbox {
+    background-color: #131720;
+    width: 10px;
+    height: 10px;
+}
+
+/* The dark background behind the popup */
+.modal-overlay {
+    position: fixed;
+    /* Stays in place when scrolling */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Semi-transparent black */
+    display: flex;
+    /* Helps center the white box */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    /* Ensures it sits on top of everything */
+}
+
+/* The white box itself */
+.modal-content {
+    background-color: #151f30;
+    padding: 30px;
+    border-radius: 15px;
+    border: 1px solid #444;
+    text-align: center;
+    width: 350px;
+}
+
+.modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.modal-buttons button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
 }
