--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,8 @@
 
 body {
     background-color: #131720;
-    height: 90vh;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,7 +34,7 @@ body {
 a {
     cursor: pointer;
 }
-h1 {
+h1,h2 {
     cursor: default;
     color: white;
 }
@@ -90,26 +91,6 @@ input {
     right: 40px;
 }
 
-.habbit {
-    background-color: #151f30;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.habbitCheckContainer {
-    display: flex;
-    justify-content: space-evenly;
-    gap : 3px;
-}
-
-.habbitCheckbox {
-    background-color: #131720;
-    width: 10px;
-    height: 10px;
-}
-
 /* The dark background behind the popup */
 .modal-overlay {
     position: fixed;
@@ -151,4 +132,49 @@ input {
     color: white;
     cursor: pointer;
     font-size: 16px;
+    
+}
+
+#habitList {
+    background-color: #131720;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    width: 95%;
+}
+
+.habit {
+    background-color: #151f30;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 120%;
+    border-radius: 50px;
+}
+
+.habitTitle {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    font-size: 28px;
+    width: 30%;
+    margin: 30px;
+    text-transform: uppercase;
+}
+
+.habitCheckContainer {
+    display: flex;
+    gap : 10px;
+    flex-wrap: wrap;
+    width: 15%;
+    margin: 30px;
+}
+
+.habitCheckbox {
+    background-color: #131720;
+    width: 20px;
+    height: 20px;
 }
