--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <div id = "loginDiv" class = "homeDiv">
     <h1>Login</h1>
     <form action="/login" method="post">
-        <input type="text" placeholder="Username" name = "username" required>
+        <input type="text" placeholder="Username" name = "username" required autocomplete="off">
         <input type="password" placeholder="Password" name = "password" required>
         <div id = "loginAlternative">
             <a id = "register">Register</a>
@@ -24,7 +24,7 @@
 <div id="registerDiv" style="display: none" class = "homeDiv">
     <h1>Register</h1>
     <form action="/register" method="post">
-        <input type="text" placeholder="Username" name="username" required>
+        <input type="text" placeholder="Username" name="username" required autocomplete="off">
         <input type="password" placeholder="Password" name="password" required>
         <input type="password" placeholder="Confirm password" name="confirmPassword" required>
         <button id="registerButton" class = "button" type="submit">Create</button>
