--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -15,12 +15,12 @@
     
     <div id = "habitList"></div>
 
-    <div id="habitModal" class="modalOverlay" style="display: none;">
-        <div class="modalContent">
+    <div id="habitModal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
             <h2>New Habit</h2>
             <form action="/addHabit" method="post">
-                <input type="text" name="habit" placeholder="eg. Reading" required autocomplete="off">
-                <div class="modalButtons">
+                <input type="text" name="habit" placeholder="eg. Reading" required autocomplete="off" style="background-color: #131720;">
+                <div class="modal-buttons">
                     <button type="submit" style="background-color: lightgreen;">Save</button>
                     <button type="button" onclick="closeModal()" style="background-color: lightcoral;">Cancel</button>
                 </div>
