--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <title>Habit Tracker</title>
         <link rel = "stylesheet" href = "../static/style.css">
     </head>
-<body>
+<body class = 'centered_layout'>
     
 <h1 id = "title">Habit Tracker</h1>
 
