--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,11 @@ body {
     overflow-x: hidden;
 }
 
+.centered_layout {
+    justify-content: center !important;
+    padding-top: 0px !important;
+}
+
 .homeDiv, form {
     display: flex;
     flex-direction: column;
